Add support for a "close all discarded tabs" option
This option allows the user to close all discarded tabs.

As a user, I often end up with many discarded tabs with a few
undiscarded tabs mixed in.  This option has saved me a bunch of
headache having to search for all of the active tabs when I want
to clean up the old unused tabs.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -48,6 +48,12 @@
     },
     "6-reload-all-windows": {
       "description": "Reload all tabs in all windows"
+    },
+    "7-close-all-discarded-tabs": {
+      "description": "Close all discarded tabs in active window"
+    },
+    "8-close-all-discarded-windows": {
+      "description": "Close all discarded tabs in all windows"
     }
   }
 }
